...
                )
            }

                @Composable
                fun RecentListensText(modifier: Modifier = Modifier) {
                    Text(
                        text = "Recent Listens",
                        fontSize = 22.sp,
                        modifier = modifier
                            .padding(start = ListenBrainzTheme.paddings.horizontal)
                            .sharedElement(
                                sharedContentState = this@SharedTransitionScope
                                    .rememberSharedContentState("recent listens"),
...
                        }
                    }
                } else {
                    LazyColumn(
                        state = listState,
                        modifier = Modifier
                            .testTag("listensScreenScrollableContainer"),
                        contentPadding = PaddingValues(top = 8.dp, bottom = 16.dp)
                    ) {
                        item {
                            Row(
                                modifier = Modifier
                                    .padding(bottom = ListenBrainzTheme.paddings.sectionSeparation)
...
                        if (!uiState.listensTabUiState.similarUsers.isNullOrEmpty()) {
                            item {
                                Text(
                                    modifier = Modifier
                                        .headerTextVerticalPadding()
                                        .padding(horizontal = ListenBrainzTheme.paddings.horizontal),
                                    text = "Similar Users",
                                    color = ListenBrainzTheme.colorScheme.text,
                                    style = MaterialTheme.typography.bodyLarge.copy(fontSize = 22.sp),
                                )
                            }

                            if (isRefreshing) {
...
                        RoundedCornerShape(2.dp)
                    )
            )
        } else {
            Text(
                when (isSelf) {
                    true -> "You have listened to"
                    false -> "$username has listened to"
                },
                color = ListenBrainzTheme.colorScheme.text,
                fontSize = 18.sp
            )
        }
...
                (followersCount ?: 0).toString(),
                style = MaterialTheme.typography.headlineMedium,
                color = ListenBrainzTheme.colorScheme.text,
                fontWeight = FontWeight.Medium,
            )
            Text(
                "Followers",
                style = MaterialTheme.typography.bodyLarge,
                color = ListenBrainzTheme.colorScheme.text,
            )
        }
        Column(horizontalAlignment = Alignment.CenterHorizontally) {
            Text(
...
