package org.listenbrainz.android.ui.screens.profile

enum class ProfileScreenTab(val value: String, val index: Int) {
    LISTENS("Listens", 0),
    STATS("Stats", 1),
    TASTE("Taste", 2),
    PLAYLISTS("Playlists", 3),
    CREATED_FOR_YOU("Created for you", 4),
}
